--- a/BlogPostTwo.html
+++ b/BlogPostTwo.html
@@ -18,7 +18,7 @@
 	<section class="container-fluid">
 		<section class="row d-flex align-items-center">
 			<section class="col-auto">
-				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
+				<a href="index.html" class="logo">  <p>BADABLING</p></a>
 			</section>
 			<nav class="text-right">
 				<input type = "checkbox" id = "check">
@@ -57,7 +57,7 @@
 
 		<h2>UI/UX - Prototype 1</h2>
 
-		<section class = "blog-post">
+		<article class = "blog-post  h-feed">
 
 			<p class = "blog1-text" h-entry>
 				In this brief essay I will be focusing on the UI and UX of my first prototype. Although, there is still plenty of work and hour to be contributed into completing the finishing product, I will, however, work with what I currently have and talk about the UI and UX that is recognizable so far.
@@ -94,7 +94,7 @@
 			
 		</p>
 
-		</section>
+	</article>
 
 
 	</section>
