--- a/DataViz/DataVisualization.html
+++ b/DataViz/DataVisualization.html
@@ -25,8 +25,8 @@
         <section class="container-fluid">
             <section class="row d-flex align-items-center">
                 <section class="col-auto">
-                	<a href="/index.html" class="logo"><h1>BADABLING</h1></a>
-				</section>
+                  <a href="index.html" class="logo">  <p>BADABLING</p></a>
+                </section>
 				<nav class="text-right">
 					<input type = "checkbox" id = "check">
 			<label for="check" class = "burger-button" id = "burger_button"><i class="fa-solid fa-bars"></i></label>
