--- a/Design.html
+++ b/Design.html
@@ -19,7 +19,7 @@
 		<section class="container-fluid">
 			<section class="row d-flex align-items-center">
 				<section class="col-auto">
-					<a href="index.html" class="logo"><h1>BADABLING</h1></a>
+					<a href="index.html" class="logo">  <p>BADABLING</p></a>
 				</section>
 				<nav class="text-right">
 					<input type = "checkbox" id = "check">
@@ -27,7 +27,7 @@
 						<ul class = "nav-sections"> 
 							<li><a href="Blog.html">Blog</a></li>
 							<li><a href="Design.html">Design</a></li>
-							<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
+							<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
 							<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 						</ul>
 					<!-- <a class="nav_icon" id="nav_icon" href="#!">
@@ -39,7 +39,7 @@
 		
 	</header>	
 <main>
-<section class="block-row homepage_wireframe" id="section6" data-parallax="scroll" data-image-src ="images/DesignBG.jpg" >
+<section class="block-row homepage_wireframe" id="section6" data-parallax="scroll" data-image-src ="images/BlogBG.jpg" >
 	<section class="hp_wireframe_container swiper">
 
 		<h1>DESIGN</h1>
@@ -124,7 +124,7 @@
 </section>
 
 
-<section class="block-row data-section" id="section2"  data-parallax="scroll" data-image-src="images/BlogTemplateImg.jpg">
+<section class="block-row data-section" id="section2"  data-parallax="scroll" data-image-src="images/BlogBG.jpg">
 	<section class="container">
 		<section class="row">
 			<section class="col-md-7">
@@ -247,7 +247,7 @@ While a parent record may contain numerous child records, according to the hiera
 	</section>
 </section>
 
-<section class="block-row data-section" id="section2"  data-parallax="scroll" data-image-src="images/blackBG.jpg">
+<section class="block-row data-section" id="section2"  data-parallax="scroll" data-image-src="images/BlogBG.jpg">
 	<section class="container">
 		<section class="row">
 			<section class="col-md-7">
@@ -387,6 +387,10 @@ The main aspect of this data art is visualizing the relationship between per cap
 				<p>The rough sketch above shows how I envision my data art. Regarding the aesthetics of the art itself, tiny decisions still need to be made, e.g., should I have a key to represent what the different colors mean. On the other hand, I could always exclude the key and leave it as it is and let the audience know what they are representing through a brief explanation. Another aspect I'm considering is putting in some animation or some sort of playthrough. This allows the audience to see all the circles starting at 0 and moving to their respective values. This would make the overall aesthetic experience even more enjoyable, in my opinion</p>
 					
 				</article>
+
+				<p class = "title-explain">Data-Art Meaning</p>
+
+				<p class = "data-text">In the data-art I included a play loop of the life expectancy and per capita income along the years. This was intentionally done, as the circles represent individuals belonging to the world/their nation and the progression of movement symbolising the race of life. Everybody wants to make it to their old age, everybody wants to experience all that they can, but for many others, this is not achievable due to their wealth status which correlates to their health. Individuals that have the necessary resources such as money, are able to take care of themselves and receive the adequate care and services needed in promoting a healthy and more fuitful life. On the otherhand, the unfortunates few that don't have access to such resources suffer in the hands of the world, due to illness, poor health care, poor nutrition and etc. It's a race to the top, but others have a lot more advantages compared to the rest, due to the resources available to them. However, as viewers can see, once time has lapsed and each individual or nation has reached the end, the loop reverts and goes back to the beginning. This is symbolic as it represents the natural phenomenon of life, we all go back to where ever we came from. No matter who's on top or at the bottom, the end is the one thing that everybody has in common and no one can escape despite havng powerful and useful resources. Which ties up with the use of the circle shape, as I previously mentioned, these circles present the different nations and the people within those nations. We're all embodiments of the circle shape, we may be different in colour, shape or beliefs, but fundamentally, we're all the same and the same fate awaits all of us.</p>
 			</section>
 		</section>
 	</section>
