--- a/blogPostOne.html
+++ b/blogPostOne.html
@@ -20,7 +20,7 @@
 		<section class="container-fluid">
 			<section class="row d-flex align-items-center">
 				<section class="col-auto">
-					<a href="index.html" class="logo"><h1>BADABLING</h1></a>
+					<a href="index.html" class="logo">  <p>BADABLING</p></a>
 				</section>
 				<nav class="text-right">
 					<input type = "checkbox" id = "check">
@@ -59,16 +59,16 @@
 <main>
 
 <section class="block-row homepage_wireframe" id="section6" data-parallax="scroll" data-image-src ="images/BlogBG.jpg" >
-	<article class="blog_container">
+	<article class="blog-container">
 
 		<h1 class = "blog-feed h-feed">BLOG</h1>
 		<h2>Close Reading - Overview of Data Visualisation </h2>
 
-		<section class = "blog_post" slot="e-content recent posts" aria-roledescription="blog entries">
-			<p class = "blog1_text">
+		<article class = "blog-post" slot="e-content recent posts" aria-roledescription="blog entries">
+			<p class = "blog1-text">
 				According to Qi Li, most definitions related to data visualization focus on the combination of data and computer technology to transform and convey information in a visual or audio form. Among the numerous definitions that the reading provides, I must say that I strongly agree with Kirk's definition (Kirk, 2012). In this definition, data visualization is defined as "the representation and presentation of data that exploits our visual perception to amplify cognition." I subscribe to this definition because I believe that data or information is more digestible in visual form. After all, there is a cognitive process that occurs between the information provided by the images and the mind of the reader. There is a process of breaking down, translating, and understanding in a way that is more digestible for everyone.
 			</p>
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				Li mentions that data visualization has a long history dating back to the 2nd century, and this in turn was used to explore the world and record historical events (Li, 2020). After reading this, I did research of my own to gather more information about the history of data visualization. Before the seventeenth hundreds, data visualization existed fundamentally in the domain of maps, roads and urban areas. Nothing compared to the advanced and more accurate data visualization that many people encounter today (Dundas Bi, 2019). Interestingly, Michael Florent Van Langren, a Flemish astronomer, is deemed to have been first to give a visual portrayal of statistical information. The line chart shows the twelve evaluations of the distinction in longitude among Toledo and Rome known , and each space experts who made those assessments (Dundas BI, 2019). What makes this interesting is that Van Langren could easily have presented this in a table, as was common practice at the time, but he used a chart that visually represented the variations in the estimates. Furthermore, I think this is also significant because it may have been the catalyst for the many variations of visual representation that were introduced in the years that followed.
 			</p>
 
@@ -76,27 +76,28 @@
 				<img src="images/FlorentVanLangren1.jpg" alt=" an image showing the first data visualization of statsitical data">
 			</figure>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				Today, data visualisation can be categorized into two major subfields, namely information visualization and scientific visualization (Li, 2020). The difference between the two subfields is that scientific visualization interest itself in representing scientific data that are physically based, such as data on humans or plants.  Whereas information visualization interest itself in representing abstract data such as school timetable. 
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				In information visualization, data has an attribute that is emergent properties of entities and may not exist independently (Li, 2020). From this assertion, I have taken that the information addressed in data representation can be extracted from or removed from different entities. An example I use to better understand this statement is information as an organized arrangement of data such as a timetable or a map (Li, 2020). This type of information allows users to extract data for their particular purposes and in turn organize this data so that it can be displayed visually. Then, is it possible to categorize the above chart as information visualization? I would not see the problem in doing so, as it’s presented the information of the twelve estimates of the differences in longitude. In addition to that, data can be extracted by example, showing which estimates were discovered around the same time or in shorter times between each discovery or which estimates were discovered far apart from each other. 
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				Going back to visual representation. Certain advantages cannot be ignored. Firstly, the translation of data into a visual representation can be eye-catching and attract attention, mainly due to the aesthetics of visual representation. In this reading, it was mentioned that aesthetics concerning data visualization has been ignored for a long time up until now (Li, 2020). The idea that aesthetics matters in data visualization was first introduced by Kurosu and Kashimara in 1995. They demonstrated the importance of aesthetics in the design of an interface that, "significantly influences the user's perceived ease of use of the entire system" (Li, 2020). This brings us to the question, "Should data visualizations be beautiful?" This is another case of aesthetics versus functionality (Lupi, 2016). Data visualizations are intended to be functional as they are intended to illuminate and decipher information for us, and their effectiveness is measured by the degree and nature of comprehension of the outcomes. Aesthetics plays an important role when beauty can enhance understanding without compromising the functionality of the data visualization. At times beauty can for sure be helpful, e.g., if you follow the fundamental standards of visual style, like great variety decision, neat textual styles, legitimate position, separating, and so on (Lupi, 2016). Be that as it may, it isn't always essential, particularly when it clouds the information it should address. It backfires when beauty draws more attention to the design of the visualization instead of the data it should convey. 
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				Accordingly, information representation ought to possibly be delightful when beauty can advance comprehension here and there without subverting it in another. Is aesthetics now and then valuable? Certainly. Is aesthetics generally valuable? Surely not (Lupi, 2016). “Beauty is not the goal of visualization, and it is usually not required to achieve the goal (Lupi, 2016), however, I’m well aware that many others might think differently and argue that beauty is what makes data visualization so effective. Individuals with the opposite opinion can be related to David McCandless who in his TED talk, the beauty of data visualization, states that even though the information can be terrible, the visuals can make it quite beautiful (McCandless, 2009). He claims that humans can get clarity from information through beautiful visuals as we’re all visualizers now. He further states that “the eye is exquisitely sensitive to patterns in variation, colours, shapes, and patterns. It loves them and it calls them beautiful” (McCandless, 2009). However, I agree with Van Wijk who considered aesthetics effective if each link in the chain is catered to from the “idea, mathematical model, algorithm, implementation to visual result is clean, simple, elegant and symmetrical” (Wan Wijk, 2006).
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				Lastly, after taking everything into consideration, the two subtypes of data visualization, the different visual representations that suit each visualization, as well as the value of aesthetics in data visualization, I think I know what to prioritize when implementing my own data visualization on my website. Firstly, following the key characteristics would be essential such as readability, recognizability, and meaning based on knowledge acquisition (Li, 2020). In addition to that, when considering the aesthetics, I need to make sure that the aesthetics only adds to the functionality of the data visualization as well as appeal to the users and make it easier for them to grasp the information represented as well as more digestible.
 			</p>
 
-		<p class = source_links>
+			
+			<p class = source-links>
 			
 				<li>	Dundas BI. (2019). “A Brief History of Data Visualization”, Dundas BI, September. Available at: <a>https://www.dundas.com/resources/blogs/introduction-to-business-intelligence/brief-history-data-visualization</a> (Accessed: 3 August 2022)</li>
 				<li>	Image: https://www.dundas.com/resources/blogs/introduction-to-business-intelligence/brief-history-data-visualization</li>
@@ -106,11 +107,11 @@
 				<li>	Lupi, G. (2016). “Beautiful Reasons”. Medium, 20 Jan. Available at: https://medium.com/accurat-in-sight/beautiful-reasons-c1c6926ab7d7 (Accessed: 3 August 2022).</li>
 				<li>	McCandless, D. “The beauty of data visualization.” TED, Nov. 2009, https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization/transcript?language=en </li>
 				<li>	Van Wijk, J. J. (2006). Views on visualization. IEEE Transactions on Visualization and Computer Graphics, 12(4), 421–432</li>
-
+	
 			
 		</p>
-
-		</section>
+	</article>
+		
 
 	</article>
 </section>
