--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </section>
     </section>
 </section>
-<section class="block-row contact" id="section4"  data-parallax="scroll" data-image-src="images/ContactBG.jpg">
+<section class="block-row contact" id="section4"  data-parallax="scroll" data-image-src="images/BlogBG.jpg">
 	<section class="container text-center">
 		<h2 class = "contact-heading">Contact Us</h2>
 		<article class="container-box">
