--- a/BlogPostThree.html
+++ b/BlogPostThree.html
@@ -18,7 +18,7 @@
 		<section class="container-fluid">
 			<section class="row d-flex align-items-center">
 				<section class="col-auto">
-					<a href="index.html" class="logo"><h1>BADABLING</h1></a>
+					<a href="index.html" class="logo">  <p>BADABLING</p></a>
 				</section>
 				<nav class="text-right">
 					<input type = "checkbox" id = "check">
@@ -55,44 +55,44 @@
 <main>
 
 <section class="block-row styleguide" id="section2"  data-parallax="scroll" data-image-src="images/BlogBG.jpg">
-	<section class="blog_container">
-		<h1 class = "blog-feed h-feed">BLOG</h1>
+	<section class="blog-container">
+		<h1 class = "blog-feed ">BLOG</h1>
 
 		<h2>Interactive Data</h2>
 
-		<section class = "blog_post">
+		<article class = "blog-post  h-feed">
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				In this essay, I will make use of the reading, but mostly the video conference made by Dimara and Perin that focuses on what data visualisation is really about. On top of that, I will make use of different sources to back up and build up on my thoughts and ideas around data visualisation.
 			</p>
 
 		
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				According to the Oxford dictionary, interactive is defined as, computing that allows information to be passed continuously and in both directions between a computer or other device and the person who used it. Breaking down the words, interactive data visualisation, one can decipher that data visualisation is interactive when information passes between the data visualisation and the person accessing it. This could be in the form of user input and computer output.
 Perin defines interaction for data visualisation as, “the interplay between a person and a data interface involving data-relayed intent”. With this definition, Dimara comments on how the pair come to this definition as they realised that most of the academic texts derived a generic view of interaction in data visualisation., one where interaction is seen as a dialogue between an “analyst” and a “visual system”.  
 
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				The authors deem this as limiting in the sense that there is barely ever research done on interaction within the context of data visualisation, and when it is done, it’s more focused on the implementation rather than the underlying design. Secondly, they argue that there is a reductionist and outdated idea regarding modalities users can use in terms of data visualisation, and that is data visualisation is always digitally based. This statement gives rise to two conflicting sides within me. Firstly, yes, data can be represented in many manners that don’t include digital products or is computer based. However, it’s very hard to imagine data that isn’t computer based can become interactive. 
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				The main point of interactive data is to employ visuals to assist analysts in understanding the relevance of data in an efficient and effective manner. Software used for interactivity, allows for capabilities to change data visualisation parameters, produce new insights, capture full value, isolate and visualise information for extended periods of time. How then, can we apply interactivity to data visualisation that is not computer based? Unfortunately, that is a question I cannot answer for today. 
 Going back to the definition provided by Prima, “data-related-intent” was a key word used in their definition and one can ponder what “data-related-intent” really is. Perin and Dimara believe that there is no agreed concept of what intent tis and how it plays a role in the visualisation pipeline. This brings rise to different arguments concerning this matter, firstly, that intent isn’t personalised or tailored to human experience because there is too much focus placed upon data, tasks and domains these inhabit, instead of human goals. On the other hand, some say there is too much focus on operationalizing intent, and we ignore engagement, and playfulness. 
 
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				This brings me to the next definition I found of interactive data visualisation found on HAYVIW, interactive data visualisation refers to the use of modern data analysis software that enables users to directly manipulate and explore graphical representations of data. Which I firmly believe that s what interactive data visualisation is all about.  Interactivity is the ideal solution for large amounts of data with complex data stories.  A static data visualisation is one that does not incorporate any interaction capabilities and does not change with times, such as infographics focused on a specific data which only shows a single viewpoint. It is essential to give great consideration about what data is being displayed and from what viewpoint. A static data visualisation is more suited to convey predetermined view rather than encouraging exploration and increasing user autonomy. I think that data visualisations should have the intent to cater to human experience and goals, which is what makes part of interactive data visualisation, the ability to explore and find trends that are required by the user, but also the intent to be engaging and playful. This aspect is often introduced through tools from software systems that give the user a variety of options to make the data more engaging and accessible, such as filtering and zooming in on certain areas of interests. 
 			</p>
 
-			<p class = "blog1_text">
+			<p class = "blog1-text">
 				In conclusion, Interactive data visualisation leverages human visual perception and cognition to improve the accuracy and effectiveness of data analysis. When integrated with computational power of machines, and human strength, problems are solved that neither approach can solve in isolation. In addition, the biggest boon of an interactive visualisation is the ability to show the latest trend which leads to well and informed decisions. In general, data visualisations allow organisations to diversify the way they display data. This leads to a deeper understanding and more specific analysis which can produce new insights and unexpected results.
 			</p>
 
-		<p class = source_links>
+		<p class = source-links>
 			
 				<li>	Dimara & Perin, E., 2019. InfoVis 2019: What is interaction for Data Visualization?</li>
 				<li>	Dimara, E., & Perin, C. (2020). What is Interaction for Data Visualization? IEEE transactions on visualization and computer graphics, 26(1), 119-129. https://doi.org/10.1109/TVCG.2019.2934283</li>
@@ -106,7 +106,7 @@ Going back to the definition provided by Prima, “data-related-intent” was a 
 			
 		</p>
 
-		</section>
+	</article>
 
 
 	</section>
