--- a/DataArt/dataArt.html
+++ b/DataArt/dataArt.html
@@ -27,7 +27,7 @@
         <section class="container-fluid">
             <section class="row d-flex align-items-center">
                 <section class="col-auto">
-                	<a href="/index.html" class="logo"><h1>BADABLING</h1></a>
+                    <a href="/index.html" class="logo">  <p>BADABLING</p></a>
 				</section>
 				<nav class="text-right">
 					<input type = "checkbox" id = "check">
