--- a/DataViz/DataVisualization.html
+++ b/DataViz/DataVisualization.html
@@ -25,7 +25,7 @@
         <section class="container-fluid">
             <section class="row d-flex align-items-center">
                 <section class="col-auto">
-                  <a href="index.html" class="logo">  <p>BADABLING</p></a>
+                  <a href="/index.html" class="logo">  <p>BADABLING</p></a>
                 </section>
 				<nav class="text-right">
 					<input type = "checkbox" id = "check">
@@ -64,7 +64,7 @@
           Video Game Data Set</a>
         <a href="#movies" id="movies" class="text-white">
           Movies Data Set</a>
-          <a href="interactivedata.html" id="" class="text-white">
+          <a href="interactivedata.html" id="jewl" class="text-white">
             Jewlery Data Set</a>
     
       </div>
