--- a/Design.html
+++ b/Design.html
@@ -27,7 +27,7 @@
 						<ul class = "nav-sections"> 
 							<li><a href="Blog.html">Blog</a></li>
 							<li><a href="Design.html">Design</a></li>
-							<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
+							<li><a href="/DataViz/">Data-Visualisation</a></li>
 							<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 						</ul>
 					<!-- <a class="nav_icon" id="nav_icon" href="#!">
@@ -147,15 +147,15 @@ The structure of hierarchical databases is characterized by a tree-like organiza
 While a parent record may contain numerous child records, according to the hierarchical database structure, each child record can only have one parent record.
 					</p>
 					<figure class = "u-photo"  slot = "tree-data">
-						<img src="images/Screenshot (157).png" alt="prototype of tree map used in constructing actual data visuals" class = "data-img">
+						<img src="images/Screenshot (157).png" alt="prototype of tree map used in constructing actual data visuals" class = "datavis-img">
 					</figure>
-					<p class = "data-caption">	Rough sketch of tree map: prototype.
+					<p class = "datavis-caption">	Rough sketch of tree map: prototype.
 					</p>
 
 					<figure class = "u-photo"  slot = "tree-data">
-						<img src="images/dataplan.png" alt="prototype of tree map used in constructing actual data visuals" class = "data-img">
+						<img src="images/dataplan.png" alt="prototype of tree map used in constructing actual data visuals" class = "datavis-img">
 					</figure>
-					<p class = "data-caption">	Rough sketch of tree map: prototype.
+					<p class = "datavis-caption">	Rough sketch of tree map: prototype.
 					</p>
 					<p class = "data-map">
 
@@ -334,10 +334,10 @@ With the largest economy on the planet, the Chinese market spend an astonishing 
 						</article> -->
 
 						<article class = "font-intro">
-							<figure class ="back-image">
+							<figure class ="data-art-img">
 								<img src="images/I feel (1).png" alt="a photo of Jonathan Harris and Sepandar Kamvar, We feel fine" class = u-photo> 
 
-								<p>What I liked about how We feel fine, was its interconnectedness. It conveyed the message of millions of feelings all originating from one point and then dispersing. The common field was the phrase, “I feel” or “I am feeling”. I also really like different colours used with the circles, which one can assume relate to different types of feelings.</p>
+								<p class = "data-art-caption">What I liked about how We feel fine, was its interconnectedness. It conveyed the message of millions of feelings all originating from one point and then dispersing. The common field was the phrase, “I feel” or “I am feeling”. I also really like different colours used with the circles, which one can assume relate to different types of feelings.</p>
 								</figure>
 						</article>
 
@@ -379,7 +379,7 @@ The main aspect of this data art is visualizing the relationship between per cap
 
 				
 					<figure class = "u-photo"  slot = "data-findings">
-						<img src="images/Screenshot (162).png" alt="Rough draft of Data Art" class = "data-img">
+						<img src="images/Screenshot (162).png" alt="Rough draft of Data Art" class = "datavis-img">
 					</figure>
 					<p class = "data-caption">	Rough draft of Data Art
 					</p>
