--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
 					<section slot="col-md-12" class = "">
 						<input type="text" name="" placeholder="Subject">
 					</section>
-					<section slot="col-md-12" class = "e-message" aria-roledescription="lave-message">
+					<section slot="col-md-12" class = "e-message" aria-roledescription="leave-message">
 						<textarea placeholder="Message"></textarea>
 					</section>
-					<section slot="col-md-12 text-center">
-						<input type="submit" value="Submit">
+					<section slot="col-md-12 text-center" class = "button-hold" >
+						<input type="submit" value="Submit" class = "submit-button">
 					</section>
 				</section>
 			</form>
