--- a/Blog.html
+++ b/Blog.html
@@ -29,7 +29,7 @@
 					<ul class = "nav-sections"> 
 						<li><a href="Blog.html">Blog</a></li>
 						<li><a href="Design.html">Design</a></li>
-						<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
+						<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
 						<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
 					</ul>
 				<!-- <a class="nav_icon" id="nav_icon" href="#!">
