--- a/index.html
+++ b/index.html
@@ -18,31 +18,29 @@
 
 <body>
 
-<header class="header">
-	<!-- <section class="container-fluid">
-		<section class="row d-flex align-items-center">
-			<section class="col-auto">
-				<a href="index.html" class="logo"><h1>BADABLING</h1></a>
-			</section>
-			<nav class="text-right">
-				<input type = "checkbox" id = "check">
-        <label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
-					<ul class = "nav-sections"> 
-						<li><a href="Blog.html">Blog</a></li>
-						<li><a href="Design.html">Design</a></li>
-						<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
-						<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
-					</ul>
-			
-			</nav>
-
-        </section>
-		</section> -->
-
-        <section id="main-bar"></section>
-
+    <header class="header">
+		<section class="container-fluid">
+			<section class="row d-flex align-items-center">
+				<section class="col-auto">
+					<a href="index.html" class="logo">  <p>BADABLING</p></a>
+				</section>
+				<nav class="text-right">
+					<input type = "checkbox" id = "check">
+			<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
+						<ul class = "nav-sections"> 
+							<li><a href="Blog.html">Blog</a></li>
+							<li><a href="Design.html">Design</a></li>
+							<li><a href="/DataViz/">Data-Visualisation</a></li>
+							<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
+						</ul>
+					<!-- <a class="nav_icon" id="nav_icon" href="#!">
+						<i class="fa fa-bars"></i></a> -->
+				</nav>
 	
-</header>	
+			</section>
+			</section>
+		
+	</header>	
 
 <main>
 
