--- a/Blog.html
+++ b/Blog.html
@@ -15,49 +15,37 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oleo+Script+Swash+Caps&family=Playfair+Display&family=Roboto:ital,wght@1,300&display=swap" rel="style.css"></head>
 <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
+<script src="https://kit.fontawesome.com/e2a7956efc.js" crossorigin="anonymous"></script>
+
 <body>
 
-<header class="header">
-	<section class="container-fluid">
-		<section class="row d-flex align-items-center">
-			<section class="col-auto">
-				<a href="index.html" class="logo">  <p>BADABLING</p></a>
-			</section>
-			<nav class="text-right">
-				<input type = "checkbox" id = "check">
-        <label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
-					<ul class = "nav-sections"> 
-						<li><a href="Blog.html">Blog</a></li>
-						<li><a href="Design.html">Design</a></li>
-						<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
-						<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
-					</ul>
-				<!-- <a class="nav_icon" id="nav_icon" href="#!">
-					<i class="fa fa-bars"></i></a> -->
-			</nav>
+  <header class="header">
+		<section class="container-fluid">
+			<section class="row d-flex align-items-center">
+				<section class="col-auto">
+				</section>
+				<nav class="text-right">
+                    <a href="index.html" class="logo">  <p>BADABLING</p></a>
 
-        </section>
-		</section>
+					<input type = "checkbox" id = "check">
+			<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
+						<ul class = "nav-sections"> 
+							<li><a href="Blog.html">Blog</a></li>
+							<li><a href="Design.html">Design</a></li>
+							<li><a href="DataViz/DataVisualization.html">Data-Visualisation</a></li>
+							<li><a href="DataArt/dataArt.html">Data-Art</a></li>
+						</ul>
+					<!-- <a class="nav_icon" id="nav_icon" href="#!">
+						<i class="fa fa-bars"></i></a> -->
+				</nav>
 	
-</header>	
+			</section>
+			</section>
+		
+	</header>	
+
 
 <main>
-
-
-<article class="main-menu" id="main-menu">
-	<span class="menu-bg"></span>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="Design.html">Design</a></li>
-		<li><a href="/DataViz/DataVisualization.html">Data-Visualization</a></li>
-		<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
-
-
-	</ul>
-</article>
-
-  <main>
 
     <h1 class = "blog-title"> Blog Entries</h1>
     <section class = "slide-container swiper">
