--- a/BlogPostThree.html
+++ b/BlogPostThree.html
@@ -12,22 +12,25 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oleo+Script+Swash+Caps&family=Playfair+Display&family=Roboto:ital,wght@1,300&display=swap" rel="style.css"></head>
+<script src="https://kit.fontawesome.com/e2a7956efc.js" crossorigin="anonymous"></script>
+
 <body>
 
-	<header class="header">
+    <header class="header">
 		<section class="container-fluid">
 			<section class="row d-flex align-items-center">
 				<section class="col-auto">
-					<a href="index.html" class="logo">  <p>BADABLING</p></a>
 				</section>
 				<nav class="text-right">
+                    <a href="index.html" class="logo">  <p>BADABLING</p></a>
+
 					<input type = "checkbox" id = "check">
 			<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
 						<ul class = "nav-sections"> 
 							<li><a href="Blog.html">Blog</a></li>
 							<li><a href="Design.html">Design</a></li>
-							<li><a href="/DataViz/DataVisualisation.js">Data-Visualisation</a></li>
-							<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
+							<li><a href="DataViz/DataVisualization.html">Data-Visualisation</a></li>
+							<li><a href="DataArt/dataArt.html">Data-Art</a></li>
 						</ul>
 					<!-- <a class="nav_icon" id="nav_icon" href="#!">
 						<i class="fa fa-bars"></i></a> -->
@@ -37,9 +40,9 @@
 			</section>
 		
 	</header>	
-	
-	
-	
+
+
+<main>
 	<article class="main-menu" id="main-menu">
 		<span class="menu-bg"></span>
 		<ul>
