--- a/DataArt/dataArt.html
+++ b/DataArt/dataArt.html
@@ -7,11 +7,11 @@
     <meta name = "description" content = "This is the page that shows Data Visuaisation made by the developer of the website">
 <meta name = "keywords" contnet=" Data Visualisation, Films, Games, jewelry ">
     <title>Data Art</title>
-    <link rel="stylesheet" href="/css/Data.css">
+    <link rel="stylesheet" href="../css/Data.css">
     <script src="/js/jquery-3.1.1.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-<link rel="stylesheet" type="text/css" href="/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+<link rel="stylesheet" type="text/css" href="../css/responsive.css">
 <link rel="stylesheet" type="text/css" href="inspector.css">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,42 +23,33 @@
 
 
 
-    <header class="header">
-        <section class="container-fluid">
-            <section class="row d-flex align-items-center">
-                <section class="col-auto">
-                    <a href="/index.html" class="logo">  <p>BADABLING</p></a>
-				</section>
-				<nav class="text-right">
-					<input type = "checkbox" id = "check">
-			<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
-						<ul class = "nav-sections"> 
-							<li><a href="/Blog.html">Blog</a></li>
-							<li><a href="/Design.html">Design</a></li>
-							<li><a href="/DataViz/DataVisualization.html">Data-Visualisation</a></li>
-							<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
-						</ul>
-					<!-- <a class="nav_icon" id="nav_icon" href="#!">
-						<i class="fa fa-bars"></i></a> -->
-				</nav>
+		<header class="header">
+			<section class="container-fluid">
+				<section class="row d-flex align-items-center">
+					<section class="col-auto">
+					</section>
+					<nav class="text-right">
+						<a href="/index.html" class="logo">  <p>BADABLING</p></a>
 	
-			</section>
-			</section>
-		</section>
-	</header>	
-
-<section class="main-menu" id="main-menu">
-	<span class="menu-bg"></span>
-	<ul>
-		<li><a href="/index.html">Home</a></li>
-		<li><a href="/Blog.html">Blog</a></li>
-		<li><a href="/Design.html">Design</a></li>
-		<li><a href="/DataViz/DataVisualization.html">Data-Visualization</a></li>
-		<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
-	</ul>
-</section>
-        
-    <main>
+						<input type = "checkbox" id = "check">
+				<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
+							<ul class = "nav-sections"> 
+								<li><a href="/Blog.html">Blog</a></li>
+								<li><a href="/Design.html">Design</a></li>
+								<li><a href="../DataViz/DataVisualization.html">Data-Visualisation</a></li>
+								<li><a href="dataArt.html">Data-Art</a></li>
+							</ul>
+						<!-- <a class="nav_icon" id="nav_icon" href="#!">
+							<i class="fa fa-bars"></i></a> -->
+					</nav>
+		
+				</section>
+				</section>
+			
+		</header>	
+	
+	
+	<main>
 
        <section class = "chart">
 
