--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
 		<section class="container-fluid">
 			<section class="row d-flex align-items-center">
 				<section class="col-auto">
-					<a href="index.html" class="logo">  <p>BADABLING</p></a>
 				</section>
 				<nav class="text-right">
+                    <a href="index.html" class="logo">  <p>BADABLING</p></a>
+
 					<input type = "checkbox" id = "check">
 			<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
 						<ul class = "nav-sections"> 
 							<li><a href="Blog.html">Blog</a></li>
 							<li><a href="Design.html">Design</a></li>
-							<li><a href="/DataViz/">Data-Visualisation</a></li>
-							<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
+							<li><a href="DataViz/DataVisualization.html">Data-Visualisation</a></li>
+							<li><a href="DataArt/dataArt.html">Data-Art</a></li>
 						</ul>
 					<!-- <a class="nav_icon" id="nav_icon" href="#!">
 						<i class="fa fa-bars"></i></a> -->
@@ -42,21 +43,6 @@
 		
 	</header>	
 
-<main>
-
-
-<article class="main-menu" id="main-menu">
-	<span class="menu-bg"></span>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="Blog.html">Blog</a></li>
-		<li><a href="Design.html">Design</a></li>
-		<li><a href="/DataViz/DataVisualization.html">Data-Visualization</a></li>
-		<li><a href="/DataArt/dataArt.html">Data-Art</a></li>
-
-
-	</ul>
-</article>
 
 <main>
 <section class="block-row banner" id="section1" data-parallax="scroll" data-image-src ="images/blackBG.jpg" >
