--- a/DataViz/DataVisualization.html
+++ b/DataViz/DataVisualization.html
@@ -25,7 +25,7 @@
             <section class="col-auto">
             </section>
             <nav class="text-right">
-                        <a href="/index.html" class="logo">  <p>BADABLING</p></a>
+                        <a href="../index.html" class="logo">  <p>BADABLING</p></a>
     
               <input type = "checkbox" id = "check">
           <label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
