--- a/DataArt/dataArt.html
+++ b/DataArt/dataArt.html
@@ -29,13 +29,13 @@
 					<section class="col-auto">
 					</section>
 					<nav class="text-right">
-						<a href="/index.html" class="logo">  <p>BADABLING</p></a>
+						<a href="../index.html" class="logo">  <p>BADABLING</p></a>
 	
 						<input type = "checkbox" id = "check">
 				<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
 							<ul class = "nav-sections"> 
-								<li><a href="/Blog.html">Blog</a></li>
-								<li><a href="/Design.html">Design</a></li>
+								<li><a href="../Blog.html">Blog</a></li>
+								<li><a href="../Design.html">Design</a></li>
 								<li><a href="../DataViz/DataVisualization.html">Data-Visualisation</a></li>
 								<li><a href="dataArt.html">Data-Art</a></li>
 							</ul>
