--- a/DataViz/DataVisualization.html
+++ b/DataViz/DataVisualization.html
@@ -60,6 +60,7 @@
       <div id="tree-map" class="text-dark">
         <h1 id="title" class="text-center mt-3"></h1>
         <p id="description" class="text-center"></p>
+        <p id = "story" class = "story-center"></p>
 
         <div id = "data">
             <ul></ul>
