--- a/DataViz/interactivedata.html
+++ b/DataViz/interactivedata.html
@@ -61,6 +61,13 @@
             
              
                   </section>
+                  <p class = "interactive-title"> World expenditure of Jewlery and Watches.</p>
+
+                  <p class = "interactive-narrative"> This tree map shows sales of high-end jewellery and watches. Mintel, one of the world's leading market research agencies recently discovered that jewellery and watch sales have rocketed up to 66 percent over 2019 and 2020, an increase of 5 percent on the previous two years.
+                    ‍
+                    With this in mind, I have decided to analyse the production, consumption, importing and exporting of jewellery, diamonds, gold and silver, all of which contribute to the manufacturing of high-end jewellery and watches worldwide. It may come as little surprise that top of the leaderboard for jewellery and wristwatch sales is economic superpower - China.</p>
+
+
                 <p class = "interactive-instruct"> Click on each continet to explore more data</p>
 
                <div id="chart">
