--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 			<section class="row d-flex align-items-center">
 				<section class="col-auto">
 				</section>
-				<nav class="text-right">
-                    <a href="index.html" class="logo">  <p>BADABLING</p></a>
+				<nav class="navbar">
+
+                     <a href="index.html" class="logo">  <p>BADABLING</p></a>
 
 					<input type = "checkbox" id = "check">
 			<label for="check" class = "burger-button" id = "burger-button"><i class="fa-solid fa-bars"></i></label>
@@ -33,9 +34,8 @@
 							<li><a href="Design.html">Design</a></li>
 							<li><a href="DataViz/DataVisualization.html">Data-Visualisation</a></li>
 							<li><a href="DataArt/dataArt.html">Data-Art</a></li>
-						</ul>
-					<!-- <a class="nav_icon" id="nav_icon" href="#!">
-						<i class="fa fa-bars"></i></a> -->
+						</ul> 
+				
 				</nav>
 	
 			</section>
@@ -239,6 +239,8 @@
 <script src="js/draggablePic.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script src="/js/nav..js" id="nav-bar"></script>
+<script src="/js/nav..js"></script>
+
 
 
 
