--- a/BlogPostFour.html
+++ b/BlogPostFour.html
@@ -151,7 +151,7 @@ The shape chosen here is a circle. I could have used other types of shapes or li
 </section>
 </main>	 
 <footer class="footer">
-	&copy; BADABLING.com
+    <p class = "u-email">&copy; BADABLING.com</p>
 </footer>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
