--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<section class="row d-flex align-items-center">
 				<section class="col-auto">
 				</section>
-				<nav class="navbar">
+				<nav class="text-right">
 
                      <a href="index.html" class="logo">  <p>BADABLING</p></a>
 
