--- a/DataArt/ExamDataArt.html
+++ b/DataArt/ExamDataArt.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title dir="ltr">3D CSS Solar System</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="styles-exam-data.css">
+    <title dir="ltr">Exam Data Art</title>
+    <link rel="stylesheet" type="text/css" href="../css/styles-exam-data.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="../css/blog.css">
+<link rel="stylesheet" type="text/css" href="..css/responsive.css">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oleo+Script+Swash+Caps&family=Playfair+Display&family=Roboto:ital,wght@1,300&display=swap" rel="style.css"></head>
+<script src="https://kit.fontawesome.com/e2a7956efc.js" crossorigin="anonymous"></script>
+
+
 
   </head>
 
@@ -40,12 +45,14 @@
 
 
   <body class="opening hide-UI view-2D zoom-large data-close controls-close">
-    <div id="navbar">
+    <section id="navbar">
       <a id="toggle-data" href="#data"><i class="icon-data"></i>Data</a>
-      <h1>Solar System - Data Art</h1>
+      <h1 class = "solar-title">Solar System - Data Art</h1>
+      <h2> Planet's speed, size and distance in relation to the sun.</>
+
       <a id="toggle-controls" href="#controls"><i class="icon-controls"></i>Controls</a>
-    </div>
-    <div id="data">
+    </section>
+    <section id="data">
       <a class="sun" title="sun" href="#sunspeed">Sun</a>
       <a class="mercury" title="mercury" href="#mercuryspeed">Mercury</a>
       <a class="venus" title="venus" href="#venusspeed">Venus</a>
@@ -55,8 +62,8 @@
       <a class="saturn" title="saturn" href="#saturnspeed">Saturn</a>
       <a class="uranus" title="uranus" href="#uranusspeed">Uranus</a>
       <a class="neptune" title="neptune" href="#neptunespeed">Neptune</a>
-    </div>
-    <div id="controls">
+    </section>
+    <aside id="controls">
       <label class="set-view">
         <input type="checkbox">
       </label>
@@ -75,106 +82,107 @@
         <input type="radio" class="set-distance" name="scale">
         <span>Distance</span>
       </label>
-    </div>
-    <div id="universe" class="scale-stretched">
-      <div id="galaxy">
-        <div id="solar-system" class="earth">
-          <div id="mercury" class="orbit">
-            <div class="pos">
-              <div class="planet">
+    </aside>
+    <section id="universe" class="scale-stretched">
+      <section id="galaxy">
+        <section id="solar-system" class="earth">
+          <section id="mercury" class="orbit">
+            <section class="pos">
+              <section class="planet">
                 <dl class="infos">
                   <dt>Mercury</dt>
                   <dd><span></span></dd>
                 </dl>
-              </div>
-            </div>
-          </div>
-          <div id="venus" class="orbit">
-            <div class="pos">
-              <div class="planet">
+              </section>
+            </section>
+          </section>
+          <section id="venus" class="orbit">
+            <section class="pos">
+              <section class="planet">
                 <dl class="infos">
                   <dt>Venus</dt>
                   <dd><span></span></dd>
                 </dl>
-              </div>
-            </div>
-          </div>
-          <div id="earth" class="orbit">
-            <div class="pos">
-              <div class="orbit">
-                <div class="pos">
-                  <div class="moon"></div>
-                </div>
-              </div>
-              <div class="planet">
+              </section>
+            </section>
+          </section>
+          <section id="earth" class="orbit">
+            <section class="pos">
+              <section class="orbit">
+                <section class="pos">
+                  <section class="moon"></section>
+                </section>
+              </section>
+              <section class="planet">
                 <dl class="infos">
                   <dt>Earth</dt>
                   <dd><span></span></dd>
                 </dl>
-              </div>
-            </div>
-          </div>
-          <div id="mars" class="orbit">
-            <div class="pos">
-              <div class="planet">
+              </section>
+            </section>
+          </section>
+          <section id="mars" class="orbit">
+            <section class="pos">
+              <section class="planet">
                 <dl class="infos">
                   <dt>Mars</dt>
                   <dd><span></span></dd>
                 </dl>
-              </div>
-            </div>
-          </div>
-          <div id="jupiter" class="orbit">
-            <div class="pos">
-              <div class="planet">
+              </section>
+            </section>
+          </section>
+          <section id="jupiter" class="orbit">
+            <section class="pos">
+              <section class="planet">
                 <dl class="infos">
                   <dt>Jupiter</dt>
                   <dd><span></span></dd>
                 </dl>
-              </div>
-            </div>
-          </div>
-          <div id="saturn" class="orbit">
-            <div class="pos">
-              <div class="planet">
-                <div class="ring"></div>
+              </section>
+            </section>
+          </section>
+          <section id="saturn" class="orbit">
+            <section class="pos">
+              <section class="planet">
+                <section class="ring"></section>
                 <dl class="infos">
                   <dt>Saturn</dt>
                   <dd><span></span></dd>
                 </dl>
-              </div>
-            </div>
-          </div>
-          <div id="uranus" class="orbit">
-            <div class="pos">
-              <div class="planet">
+              </section>
+            </section>
+          </section>
+          <section id="uranus" class="orbit">
+            <section class="pos">
+              <section class="planet">
                 <dl class="infos">
                   <dt>Uranus</dt>
                   <dd><span></span></dd>
                 </dl>
-              </div>
-            </div>
-          </div>
-          <div id="neptune" class="orbit">
-            <div class="pos">
-              <div class="planet">
+              </section>
+            </section>
+          </section>
+          <section id="neptune" class="orbit">
+            <section class="pos">
+              <section class="planet">
                 <dl class="infos">
                   <dt>Neptune</dt>
                   <dd><span></span></dd>
                 </dl>
-              </div>
-            </div>
-          </div>
-          <div id="sun">
+              </section>
+            </section>
+          </section>
+          <section id="sun">
             <dl class="infos">
               <dt>Sun</dt>
               <dd><span></span></dd>
             </dl>
-          </div>
-        </div>
-      </div>
-    </div>
-    <H1>BYHCB UDBCUPIDBCY8BDYB YDC HDC </H1>
+          </section>
+        </section>
+      </section>
+    </section>
+    
+    <H1> Planet's speed, size and distance in relation to the sun.</H1>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script type="/text/javascript">
     if (typeof jQuery == 'undefined') { 
@@ -183,10 +191,10 @@
     </script>
     <script src="/js/prefixfree.min.js"></script>
     <script src="/js/scripts.min.js"></script>
-
- 
-  </body>
-  <!-- <footer class="footer">
+    
+ <footer class="footer-exam">
     <p class = "u-email">&copy; BADABLING.com</p>
-</footer> -->
+</footer>
+  </body>
+  
 </html>
